devops/lutri/base/mongoexport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lutri2-mongoexport-deployment
  labels:
    component: lutri2-mongoexport
spec:
  replicas: 1
  selector:
    matchLabels:
      component: lutri2-mongoexport
  template:
    metadata:
      labels:
        component: lutri2-mongoexport
    spec:
      containers:
        - name: lutri2-mongoexport-container
          image: bitnami/mongodb-exporter
          ports:
            - containerPort: 9216
              name: mongoexp-port
---
apiVersion: v1
kind: Service
metadata:
  name: lutri2-mongoexport-service
  labels:
    component: lutri2-mongoexport
spec:
  selector:
      component: lutri2-mongoexport
  ports:
    - port: 9216
      targetPort: mongoexp-port
      protocol: TCP
